# simd

./: 1  1.asm  2  2.asm  3  3.asm  CMakeLists.txt  common.cpp  common.h  main.cpp  tasks.cpp  tasks.h
.cache/clangd/index/: common.cpp.942B9375002FD7AB.idx  common.h.E0C4C25E20FFEC35.idx  main.cpp.E8C9AEEA5778C709.idx  tasks.cpp.D14F211D61BF31AE.idx
